# Sistema-de-Monitoramento-Industrial

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  COMPLETION_REPORT.md  FILE_INDEX.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  convert_data.py  industrial_monitoring.c
data/: sample_data.csv
src/: benchmark.cpp  benchmark.h  data_structures.cpp  data_structures.h  dataset.cpp  dataset.h  generate_data.cpp  main.cpp  ui.cpp  ui.h
